# libsnark-tutorial

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  libsnarkwrapper.cpp  libsnarkwrapper.h  main.cpp  myMain.cpp  testSnark.py  zkSnarkExample.cpp
